
  18. Added external scripts

  19. Added possibility for choosing menu in content new/edit views

  20. Cleaned up most of code


Mokio (dev "Tree Pipit") 12.08.2014 v0.0.4
  
  1. Added Mokio exceptions
    ~ Exception classes can be found under Mokio::Exceptions module

    1.1 MokioError default exception
      ~ All below inherits from this

    1.2 IsNotMenuRootError exception

    1.3 IsNotAMokioContentError exception

    1.4 IsNotAMokioMenuError exception

Mokio 07.10.2014 v0.0.5
    1. Add configurable mechanizm to extend standard Mokio views (check spec/dummy/config/views.yml)
    2. Easy way to add your own buttons in index views (main buttons and action buttons)
    3. Add languages management
    4. Add Mokio Logger
    5. More code cleanups
    6. Fixed handling solr configuration and content searching
    7. Show link to menu in form
    8. Fixed password update function
    9. Fixed "Your site" href
    10. Better generation of menu slug
    11. Add / change translations
    12. More flexible menu helpers
    13. More bug fixes
    14. More code cleanups



Mokio 07.10.2014 v0.0.6
    1. Update summary, description in mokio.gemspec
    2. Update changelog

Mokio <add_release_date> v0.0.7
    1. Bugfix in ablility.rb
    2. Fix delete element confirmation
    3. Search box hidden when SOLR is off
    4. Bug fixes in ExternalScripts
    5. Prevent renderer from crash when can't find html element
    6. Add / change some translations
    7. Change "Users" to "Admins"
    8. Fixes in breadcrumbs and form for user password change
    9. Add invalid password error message
    10. Clean up the mess in translations
    11. Reorganization of menu
    12. Added spaces between form actions buttons
    13. Add helper to create sidebar buttons (sidebar_btn)
    14. Add translation helper for sidebar buttons (bts)
    15. Rebuilding language management
    16. Improved movie gallery
    17. New README
    18. Version
    19. Smaller red header